@@ -1,10 +1,10 @@
 package com.example.MobileStorageManagement.Controller;
 
-
 import com.example.MobileStorageManagement.DTO.LoginRequest;
 import com.example.MobileStorageManagement.DTO.LoginResponse;
 import com.example.MobileStorageManagement.DTO.RegisterRequest;
 import com.example.MobileStorageManagement.DTO.UpdateUserDTO;
+import com.example.MobileStorageManagement.DTO.*;
 import com.example.MobileStorageManagement.Entity.Cart;
 import com.example.MobileStorageManagement.Entity.Role;
 import com.example.MobileStorageManagement.Entity.User;
@@ -12,6 +12,7 @@ import com.example.MobileStorageManagement.JWT.JwtUtil;
 import com.example.MobileStorageManagement.Repository.CartRepository;
 import com.example.MobileStorageManagement.Repository.RoleRepository;
 import com.example.MobileStorageManagement.Repository.UserRepository;
+import com.example.MobileStorageManagement.Service.CartService;
 import com.example.MobileStorageManagement.Service.UserService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -57,6 +58,9 @@ public class UserController {
     @Autowired
     private CartRepository cartRepository;
 
+    @Autowired
+    private CartService cartService;
+
     @PostMapping("/register")
     public ResponseEntity<?> register(@RequestBody RegisterRequest req) {
 
@@ -74,7 +78,6 @@ public class UserController {
         Role role = roleRepository.findById(1)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy quyền"));
         user.setRole(role);
-
         User savedUser = userService.saveUser(user);
 
         Cart cart = new Cart();
@@ -94,8 +97,9 @@ public class UserController {
                 ? req.getSdt()
                 : req.getEmail();
 
+        Authentication authentication;
         try {
-            authManager.authenticate(
+            authentication = authManager.authenticate(
                     new UsernamePasswordAuthenticationToken(input, req.getPassWord())
             );
         } catch (Exception e) {
@@ -103,19 +107,25 @@ public class UserController {
                     .body("Sai thông tin đăng nhập");
         }
 
-        Authentication authentication = authManager.authenticate(
-                new UsernamePasswordAuthenticationToken(input, req.getPassWord())
-        );
         SecurityContextHolder.getContext().setAuthentication(authentication);
 
         // Lấy role
         List<String> roles = authentication.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
 
-        // Lấy user info từ DB
+        // Lấy user
         User user = userRepository.findBySdtOrEmail(input, input)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy user"));
+
+        // Get hoặc create cart
+        Cart cartEntity = cartService.getCartByUserId(user.getUserId())
+                .orElseGet(() -> cartRepository.save(
+                        Cart.builder()
+                                .user(user)
+                                .status("ACTIVE")
+                                .build()
+                ));
 
         // Generate token
         String jwt = jwtUtil.generateToken(input, roles);
@@ -129,10 +139,12 @@ public class UserController {
         res.setAddress(user.getAddress());
         res.setAvatar(user.getAvatar());
         res.setRole(user.getRole().getRoleId());
+        res.setCartId(cartEntity.getCartId());
         res.setToken(jwt);
 
         return ResponseEntity.ok(res);
     }
+
 
     @PreAuthorize("hasRole('ADMIN') or hasRole('WORKER')")
     @GetMapping("/sdt/{sdt}")
